# claude-vibe

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  bootstrap.sh  mcp-servers.yaml  permissions.yaml  setup.sh
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/build-vibe-skill/: SKILL.md
.claude/skills/using-git-worktrees/: SKILL.md
cli/: Makefile  SPEC.md  go.mod  go.sum
cli/cmd/vibe/: main.go  main_test.go
cli/internal/agent/: agent.go  agent_test.go  claude.go  claude_test.go
cli/internal/config/: active_profile.go  active_profile_test.go  config.go  isaac.go  (+9 more)
config/: env.template
docs/: ADDING_EVALS.md  ADDING_SKILLS.md  CONTRIBUTING.md  DEVELOPMENT.md  FEATURE_SCOPING.md  USER_GUIDE.md
evals/: pyproject.toml
evals/.claude/: settings.json
evals/hooks/: log-skill.sh
evals/src/skill_evals/: __init__.py  models.py  runner.py
evals/test-cases/: fe-dnb-hunting.yaml  fe-ee.yaml  fe-meeting-notes.yaml  fe-social-media-tools.yaml  fe-ssagent.yaml  lean-sigma-tools.yaml  skill-quality.yaml  skill-routing.yaml
evals/tests/: conftest.py  test_google_api_utils.py  test_lakeview_builder.py  test_markdown_parser.py  test_pretty_print.py  test_resource_imports.py  test_select_warehouses.py  test_skill_detection.py
hooks/: guard-bash.sh  guard-files.sh
lib/: profiles.sh  tty.sh
plugins/mcp-servers/: README.md
plugins/vibe-setup/: README.md
scripts/: check-skill-sizes.sh
steps/: 01-install-claude.sh  02-google-oauth.sh  03-enable-apis.sh  04-install-tools.sh  05-ai-dev-kit.sh  06-install-plugins.sh  07-configure-mcp.sh  08-validate.sh
(+483 files in other folders)
