[project]
name = "skill-evals"
version = "0.1.0"
description = "Eval suite for Claude Code skill invocation"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.37",
    "pyyaml>=6.0",
    "anyio>=4.0",
]

[project.scripts]
skill-evals = "skill_evals.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "src",
    "../plugins/databricks-tools/skills/databricks-warehouse-selector/resources",
    "../plugins/databricks-tools/skills/databricks-query/resources",
    "../plugins/databricks-tools/skills/databricks-lakeview-dashboard/resources",
    "../plugins/google-tools/skills/google-docs/resources",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
